# scan-card

./: README.md  build.gradle  gradle.properties  settings.gradle.kts
demo/: build.gradle  build.gradle.kts
demo/src/main/: AndroidManifest.xml
demo/src/main/java/demo/: CardDetailsActivity.java  CardDetailsActivityKotlin.kt  IntroActivity.java
demo/src/main/res/layout/: activity_card_details.xml  activity_intro.xml
gradle/: libs.versions.toml
sdk/: build.gradle  build.gradle.kts  proguard-customer.pro  proguard-rules.pro
sdk/src/main/: AndroidManifest.xml
sdk/src/main/cpp/: CMakeLists.txt  CardRecognizer-jni.cpp
sdk/src/main/cpp/armneon2x86sse/: CMakeLists.txt
sdk/src/main/cpp/caffe/: CMakeLists.txt
sdk/src/main/cpp/crossplatform/: CMakeLists.txt
sdk/src/main/cpp/crossplatform/CrossPlatform/Include/Public/: Enums.h  IRecognitionCore.h  IRecognitionCoreDelegate.h
sdk/src/main/cpp/crossplatform/CrossPlatform/Include/Recognizer/: IDateRecognizer.h  IEdgesDetector.h  IFrameStorage.h  INameRecognizer.h  INumberRecognizer.h
sdk/src/main/cpp/crossplatform/CrossPlatform/Recognizer/: DateRecognizer.cpp  DateRecognizer.h  EdgesDetector.cpp  EdgesDetector.h  FrameStorage.cpp  FrameStorage.h  NameRecognizer.cpp  NameRecognizer.h  NumberRecognizer.cpp  NumberRecognizer.h  RecognitionCore.cpp  RecognitionCore.h
sdk/src/main/cpp/crossplatform/CrossPlatform/Torch/: TorchManager.cpp
sdk/src/main/cpp/crossplatform/jniImpl/: RecognitionCoreDelegate.cpp  RecognitionCoreDelegate.h  TorchDelegate.cpp
sdk/src/main/cpp/eigen/: CMakeLists.txt
sdk/src/main/cpp/libyuv/: CMakeLists.txt
sdk/src/main/cpp/protobuf/: CMakeLists.txt
sdk/src/main/java/lens24/intent/: ScanCardIntent.java
sdk/src/main/java/lens24/ui/: InitLibraryFragment.java  ScanCardRequest.java
sdk/src/main/java/scan/camera/: AutoFocusManager.java  BlockingOperationException.java  CameraConfigurationUtils.java  CameraManager.java  CameraUtils.java  FpsCounter.java  OrientationHelper.java  ProcessFrameThread.java  RecognitionAvailabilityChecker.java  RecognitionCoreUtils.java  RecognitionUnavailableException.java  RenderThread.java  ScanManager.java  ScanManagerHandler.java  TorchManager.java  WindowRotationListener.java
sdk/src/main/java/scan/intent/: Card.java  ScanCardCallback.java  ScanCardIntent.java
sdk/src/main/java/scan/ndk/: DisplayConfiguration.java  DisplayConfigurationImpl.java  DisplayHelper.java  NeuroDataHelper.java  RecognitionConstants.java  RecognitionCore.java  RecognitionCoreDummy.java  RecognitionCoreImpl.java  RecognitionCoreNdk.java  RecognitionResult.java  RecognitionStatusListener.java  (+1 more)
sdk/src/main/res/drawable/: ic_close.xml
sdk/src/main/res/layout/: card_detection.xml  fragment_scan_card.xml  lens24_fragment_scan_card.xml
sdk/src/main/res/values/: color.xml  strings.xml  styles.xml
(+19 files in other folders)
